--- a/swiper-uzuri/package.json
+++ b/swiper-uzuri/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://clarissei.github.io/SliderDesign/",
   "name": "swiper-uzuri",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +43,6 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "description": ""
 }
